--- a/inbox.html
+++ b/inbox.html
@@ -60,7 +60,7 @@ ul.ui-autocomplete li.ui-menu-item {
 }
 </style>		
 </head>
-	<body style="background:#fff"><script src="https://m.sugardaddylocal.com/custom_menu_updated.js"></script>
+	<body style="background:#fff"><script src="https://m.onesugardaddy.com/custom_menu_updated.js"></script>
 
 
 <div id="tt" class="grh" style="display:none;border-top:5px solid aqua;width:100%;color:white;text-align:center;position:fixed;margin:auto;left:0;right:0;top:50px;height:40px;z-index:99999999999999999">
@@ -88,8 +88,7 @@ ul.ui-autocomplete li.ui-menu-item {
 <script src="https://lushmatch.com/assets/js/bootstrap.min.js"></script>
 <script src="https://lushmatch.com/assets/js/scripts.js"></script>
 <script src="https://lushmatch.com/assets/js/jquery-confirm.min.js"></script>
-<script src="https://lushmatch.com/assets/js/jquery.geocomplete.js"></script>
-	<script src="https://sugardaddylocal.com/jsSocketNode.js"></script> <script src="track.js"></script>
+<script src="https://onesugardaddy.com/jsSocketNode.js"></script> <script src="track.js"></script>
 
 <script>
 
