--- a/sent.html
+++ b/sent.html
@@ -60,14 +60,14 @@ ul.ui-autocomplete li.ui-menu-item {
 }
 </style>		
 </head>
-	<body style="background:#fff"><script src="https://sugardaddylocal.com/custom_menu_updated.js"></script>
+	<body style="background:#fff"><script src="https://m.onesugardaddy.com/custom_menu_updated.js"></script>
 
 
-<div id="tt" class="grh" style="display:none;border-top:5px solid aqua;width:500px;color:white;text-align:center;position:fixed;margin:auto;left:0;right:0;top:50px;height:40px;z-index:99999999999999999">
+<div id="tt" class="grh" style="display:none;border-top:5px solid aqua;width:100%;color:white;text-align:center;position:fixed;margin:auto;left:0;right:0;top:50px;height:40px;z-index:99999999999999999">
 	<table style="margin:5px;width:100%;font-family:Open Sans; font-size:16px;font-weight:300"><tr><td style="width:35%">NEW MAIL: <span style="border:none;border-radius:100px;padding:4px;padding-left:10px;padding-right:10px;background:#f0f0f0;color:#000" id="new_mail"></span></td><td style="width:30%"><i class="fa fa-inbox"></i> INBOX </td><td style="width:35%">TOTAL: <span style="border:none;border-radius:6px;padding:2px;background:#fff;color:#000" id="all_mail"></span></td></tr></table>
 </div>
 <div class="grh" style="border-top:5px solid aqua;width:100%;color:white;text-align:center;position:fixed;margin:auto;left:0;right:0;top:50px;height:30px;z-index:99999999999999999">
-	<a href="inbox.html" style="color:white">VIEW INBOX</a>
+	<a href="sent.html" style="color:WHITE">VIEW INBOX</a>
 </div>
 <div id="gmbh" style="background:aliceblue;text-align:center;position:absolute;top:0px;margin:auto;left:0;right:0">
 	<div class="container" id="container"  style="max-width:100%;margin:auto;margin-top:70px">
@@ -87,9 +87,9 @@ ul.ui-autocomplete li.ui-menu-item {
 <script src="https://lushmatch.com/assets/js/events.js"></script>
 <script src="https://lushmatch.com/assets/js/bootstrap.min.js"></script>
 <script src="https://lushmatch.com/assets/js/scripts.js"></script>
-<script src="https://sugardaddylocal.com/jsSocketNode.js"></script> <script src="track.js"></script>
 <script src="https://lushmatch.com/assets/js/jquery-confirm.min.js"></script>
-<script src="https://lushmatch.com/assets/js/jquery.geocomplete.js"></script>
+<script src="https://onesugardaddy.com/jsSocketNode.js"></script> <script src="track.js"></script>
+
 <script>
 
 	//TO DO:
@@ -213,6 +213,7 @@ ul.ui-autocomplete li.ui-menu-item {
 		$$('tt').style.width=w_w+'px'
 		$$('tt').style.maxWidth=w_w+'px'
 	}
+	
 </script>
 </body>
 </html>
