--- a/settings.html
+++ b/settings.html
@@ -11,7 +11,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Open+Sans:300' rel='stylesheet' type='text/css'>
     <style type="text/css">
     	body{
-    background:#eee;    
+    background:#eee;
+font-family:Open Sans!Important	
 }
 .widget-author {
   margin-bottom: 58px;
@@ -409,15 +410,15 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 		</script>	
 </head>
 <body>
-<div class="container mt-5" style="background:#000;color:white"> 
+<div class="container mt-5" style="background:#000;color:white;max-width:800px"> 
 			<div style="background:#000;color:white"><h3>ADMIN CONTROL PANEL</h3>					
             </div>        </div>
-            <div class="wizard" style="border-bottom:5px solid white">
+            <div class="wizard" style="border-bottom:5px solid white;max-width:800px;margin:auto">
                 <nav class="list-group list-group-flush">
 					<a id="media" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('media')">
                         <div class="d-flex justify-content-between align-items-center">
                             <div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
-                                <div id="media_caption" class="font-weight-heavy text-uppercase f-big "> + My Media</div>
+                                <div id="media_caption" > + My Media</div>
                             </div><span class="badge badge-secondary">7</span>
                         </div>
                     </a> 
@@ -464,12 +465,12 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 					<a id="my_tokens" style="background:aliceblue;display:none;" class="list-group-item" href="javascript:toggle_children('my_tokens')">
 						<div class="d-flex justify-content-between align-items-center">
 							<div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
-								<div id="my_profile_caption" class="font-weight-heavy text-uppercase f-big "> + Tokens</div>
+								<div id="my_profile_caption" class=""> + Tokens</div>
 							</div><span class="badge badge-secondary">17</span>
 						</div>
 					</a>  
 					<span id="my_tokens_children" style="display:none">
-						<a style="background:#fbfbfb" id="redeem_tokens" style="background:white" id="profile" class="list-group-item" href="frame_profile.html">
+						<a style="background:#" id="redeem_tokens" style="background:white" id="profile" class="list-group-item" href="frame_profile.html">
 							<div class="d-flex justify-content-between align-items-center">
 								<div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
 									<div class="d-inline-block font-weight-medium text-uppercase" style="margin-left:25px"> Redeem Tokens</div>
@@ -494,7 +495,7 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 					<a id="my_profile" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('my_profile')">
 						<div class="d-flex justify-content-between align-items-center">
 							<div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
-								<div id="my_profile_caption" class="font-weight-heavy text-uppercase f-big "> + My Profile</div>
+								<div id="my_profile_caption" class=""> + My Profile</div>
 							</div><span class="badge badge-secondary">7</span>
 						</div>
 					</a>  
@@ -517,7 +518,7 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 					<a id="wishlist" style="background:aliceblue" class="list-group-item" href="javascript:toggle_children('wishlist')">
 						<div class="d-flex justify-content-between align-items-center">
 							<div><i class="fe-icon-tag mr-1 text-muted"></i>
-								<div id="wishlist_caption" class="font-weight-heavy text-uppercase f-big " style="">+ My WishList</div>
+								<div id="wishlist_caption" class="" style="">+ My WishList</div>
 							</div><span class="badge badge-secondary">2</span>
 						</div>
 					</a>
@@ -605,7 +606,7 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 					<a id="matches" style="background:aliceblue" id="profile" class="list-group-item" href="javascript:toggle_children('matches')">
 						<div class="d-flex justify-content-between align-items-center">
 							<div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
-								<div id="matches_caption" class="font-weight-heavy text-uppercase f-big "> + My Matches</div>
+								<div id="matches_caption" class=""> + My Matches</div>
 							</div><span class="badge badge-secondary">7</span>
 						</div>
 					</a>   
@@ -656,7 +657,7 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 					<a id="support" style="background:aliceblue" id="profile" class="list-group-item" href="javascript:toggle_children('support')">
 						<div class="d-flex justify-content-between align-items-center">
 							<div><i class="fe-icon-shopping-bag mr-1 text-muted"></i>
-								<div id="matches_caption" class="font-weight-heavy text-uppercase f-big "> + Support</div>
+								<div id="matches_caption" class=""> + Support</div>
 							</div><span class="badge badge-secondary">7</span>
 						</div>
 					</a> 
