--- a/frame_profile.html
+++ b/frame_profile.html
@@ -255,11 +255,11 @@ font-weight:bold
 								</div>	
 								<div class="col-md-6">
 									<div class="form-group">	
-										<label class="block">What are you</label>						
+										<label class="block">Your Origin</label>						
 										<select class="form-control" id="race" style="height:40px;font-size:16px!Important" onchange="pupdate(this)";>
 											<option name="">Rather Not Disclose</option>
-											<option name="white">White</option>
-											<option name="black">Black</option>
+											<option name="white">Caucasian</option>
+											<option name="black">African American</option>
 											<option name="latin">Latin</option>
 											<option name="native_american">Native American</option>
 											<option name="east_indian">East Indian</option>
@@ -269,7 +269,7 @@ font-weight:bold
 											<option name="african">African</option>
 											<option name="pacific_islanders">Pacific Islander</option>
 											<option name="russian">Russian</option>
-											<option name="ukranian">Ukranian</option>
+											<option name="ukranian">Ukranianian</option>
 										</select>
 									</div>
 								</div>
